assets/css/style.css
/* TODO: fix CSS naming cenvention */


/* Fonts */

@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,700');
* {
	font-family: 'Ubuntu', sans-serif;
}

/* ************************************************************************ */

@media all and (max-width: 991px) {
	.middle-div {
		padding-top: 10%;
	}
}


#checkCredsUser	 {
	position: absolute;
	right: 50px;
	top: 6px;
}

#checkCredsUserPass	 {
	position: absolute;
	right: 50px;
	bottom: 6px;
}

#wrongCredsUser	 {
	position: absolute;
	right: 50px;
	top: 6px;
}

#wrongCredsUserPass	 {
	position: absolute;
	right: 50px;
	bottom: 6px;
}


.fa-check {
	color: green;
}

.alignleft {
	float: left;
}

.alignright {
	float: right;
}

.align-right-margin {
	margin-left: 10px;
}

.btn-cancel {
	border-color: #D24D57;
	color: #000;
}

#getAllTaskListSelectList {
	width: 40%;
}

.padded {
	padding: 2px;
	background-color: rgb(244, 241, 241);
}

/* Edit icon */

/* #editMenu{
	display: none;
} */

.edit-menu-icons {
	padding-right: 20px;
}

.nav>li>a {
	border-radius: 50px;
}

/* Icon bar */

.icon-bar {
	width: 100%;
	/* Full-width */
	background-color: #555;
	/* Dark-grey background */
	overflow: auto;
	/* Overflow due to float */
}

.icon-bar a {
	float: left;
	/* Float links side by side */
	text-align: center;
	/* Center-align text */
	width: 20%;
	/* Equal width (5 icons with 20% width each = 100%) */
	padding: 12px 0;
	/* Some top and bottom padding */
	transition: all 0.3s ease;
	/* Add transition for hover effects */
	color: white;
	/* White text color */
	font-size: 36px;
	/* Increased font size */
}

.icon-bar a:hover {
	background-color: #000;
	/* Add a hover color */
}

.icon-bar a:active {
	background-color: #4CAF50;
	/* Add an active/current color */
}

#editMenu li.hover {
	/* background-color: aqua; */
	display: inline;
}

.task-success {
	color: #fff;
	background-color: #D24D57;
}

.form-control {
	border: 0;
}

.input-no-border {
	border-bottom: 2px solid #D24D57;
	box-shadow: none;
}

.form-control:focus {
	border-color: #D24D57;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D24D57;
}

.btn-primary {
	color: #fff;
	background-color: #D24D57;
	border-color: #D24D57;
}

.btn-primary:hover,
.btn-primary:active,
.btn-primary:visited {
	background-color: rgb(207, 58, 70) !important;
}

.btn-warning {
	color: #f0ad4e;
	background-color: #fff;
	border-color: #eea236;
}

.panel-default>.panel-heading {
	color: #fff;
	background-color: #D24D57;
	border-color: #ddd;
}

/* .panel-body {
	min-height: 100%;
} */

.panel-body-no-border{
	border: 0;
}

h4 {
	color: #D24D57;
}

.nav>li>a:hover {
	position: relative;
	display: block;
	padding: 10 px 15px;
	background-color: #D24D57;
	color: #fff;
	border-radius: 50px;
}

a {
	color: #7c7171;
}

.dropdown-menu>li>a {
	color: #D24D57;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
	border-color: transparent;
	background-color: #D24D57;
	/* border: solid 10px black; */
}

.navbar-brand:hover{
	color: rgb(231, 230, 230) !important;
}

.nav-container {
	background-color: #D24D57;
}

.navbar-default .navbar-brand {
	color: #fff;
}

.btn-default {
	color: #fff;
	background-color: transparent;
	border-color: #fff;
}

.btn-default:hover {
	color: #fff;
	background-color: rgb(207, 58, 70);
	border-color: #ccc;
}

input[type="submit"] {
	font-family: FontAwesome;
}

.login-form-1 {
	margin-top: 10vh;
	max-width: 100vw;
	color: #D24D57;
}

.login-form-1>.login-group>.btn>.btn-primary {
	color: #fff;
	background-color: #D24D57;
	border-color: #666;
}

.left-home-col {
	border-right: 5px solid transparent;
	background-color: #fff;
	height: 100vh;
	min-height: 90vh;
}

.right-home-col {
	padding-top: 215px;
	background-color: #fff;
	height: 100vh;
	min-height: 45vh;
	/* background-image: url("/assets/img/loginImg.jpg") */
}

.login-image {
	width: 35%;
	height: 55%;
}

.side-menu {
	/* background-color: lightgrey; */
	min-height: 100vh;
	/* margin-left: 100px; */
}

.top-brand {
	margin-left: 20px;
}

.addTask,
.overdueTasks,
.tomorrowsTasks,
.todaysTasks {
	display: none;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
	border-color: transparent;
}

/* Floating add button */

.float {
	display: none;
	position: fixed;
	width: 60px;
	height: 60px;
	bottom: 50px;
	right: 5%;
	;
	background-color: #D24D57;
	color: #FFF;
	border-radius: 50px;
	text-align: center;
	box-shadow: 2px 2px 3px #999;
}

.my-float {
	margin-top: 22px;
}

* {
	padding: 0;
	margin: 0;
}

